# bioinf

./: .gitignore  CMakeLists.txt  LICENSE  README.md  test.sh
documentation/: Bioinf_dokumentacija.docx  Documentation.docx  ~$oinf_dokumentacija.docx  ~WRL3480.tmp
input/: medium.fa  small.fa
src/: helper.cpp  helper.h  main.cpp
test/lastYearStudents/: large_100.out  large_1000.out  medium_10.out  medium_100.out  medium_4.out  small_3.out  small_4.out  small_8.out
test/orginal/: large_100.out  large_1000.out  medium_10.out  medium_100.out  medium_1000.out  medium_4.out  small_3.out  small_4.out  small_8.out
